@@ -34,20 +34,29 @@ opts = OptionParser.new do |opts|
   opts.on("-S", "--socket PATH", "bind to unix domain socket")                    { |file| options[:socket] = file }
   opts.on("-e", "--environment ENV", "Rails environment (default: development)")  { |env| options[:environment] = env }
   opts.on("-c", "--chdir PATH", "Change to dir before starting")                  { |dir| options[:chdir] = File.expand_path(dir) }
-  opts.on("-s", "--servers NUM", "Number of servers to start",
-                                 "set a value >1 to start a cluster")             { |num| options[:servers] = num.to_i }
+  opts.on("-t", "--timeout SEC", "Request or command timeout in sec",            
+                                 "(default: #{options[:timeout]})")               { |sec| options[:timeout] = sec.to_i }
+  opts.on(      "--prefix PATH", "Mount the app under PATH (start with /)")       { |path| options[:prefix] = path }
+  opts.on(      "--stats PATH", "Mount the Stats adapter under PATH")             { |path| options[:stats] = path }
+
+  opts.separator ""
+  opts.separator "Daemon options:"
+  
   opts.on("-d", "--daemonize", "Run daemonized in the background")                { options[:daemonize] = true }
   opts.on("-l", "--log FILE", "File to redirect output",
                               "(default: #{options[:log]})")                      { |file| options[:log] = file }
   opts.on("-P", "--pid FILE", "File to store PID",
                               "(default: #{options[:pid]})")                      { |file| options[:pid] = file }
-  opts.on("-t", "--timeout SEC", "Request or command timeout in sec",            
-                                 "(default: #{options[:timeout]})")               { |sec| options[:timeout] = sec.to_i }
   opts.on("-u", "--user NAME", "User to run daemon as (use with -g)")             { |user| options[:user] = user }
   opts.on("-g", "--group NAME", "Group to run daemon as (use with -u)")           { |group| options[:group] = group }
-  opts.on(      "--prefix PATH", "Mount the app under PATH (start with /)")       { |path| options[:prefix] = path }
-  opts.on("-C", "--config PATH", "Load option from a config file")                { |file| options[:config] = file }
-  opts.on(      "--stats PATH", "Mount the Stats adapter under PATH")             { |path| options[:stats] = path }
+  
+  opts.separator ""
+  opts.separator "Cluster options:"
+  
+  opts.on("-s", "--servers NUM", "Number of servers to start",
+                                 "set a value >1 to start a cluster")             { |num| options[:servers] = num.to_i }
+  opts.on("-o", "--only", "Send command to only one server of the cluster")       { |only| options[:only] = only }
+  opts.on("-C", "--config PATH", "Load options from a config file")               { |file| options[:config] = file }
   
   opts.separator ""
   opts.separator "Common options:"
@@ -62,7 +71,7 @@ end
 # == Utilities
 
 def cluster?(options)
-  options[:servers] && options[:servers] > 1
+  options[:only] || (options[:servers] && options[:servers] > 1)
 end
 
 def load_options_from_config_file!(options)
